--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,6 +19,9 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
@@ -27,8 +30,9 @@ main {
   flex-direction: column;
   width: 90%;
   background-color: body;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding-top: 10px;
+  flex-grow: 2;
 }
 
 #tweets-container {
@@ -38,8 +42,14 @@ main {
 @media only screen and (min-width: 1024px) {
   main {
     width: 60%;
-    float: right;
+    /* float: right; */
     padding-top: 200px;
     padding-right: 60px;
   }
+
+  body {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
+
