--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,6 +9,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  top: 0;
   /*nav-bar will always be in front of some content. This is called an overlaid nav-bar. Without this, if we scrolls down the page, the nav-bar would scroll up and off the page too." */
 }
 
