--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -4,9 +4,8 @@ article {
   border: solid;
   border-width: medium;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-direction: column;
-  height: 250px;
   padding-left: 10px;
   padding-right: 10px;
   color: #55595c;
@@ -27,7 +26,7 @@ article:hover {
   padding-left: 1em;
   padding-right: 1em;
   padding-top: 1.5%;
-  height: 150px;
+  /* height: 150px; */
   font-size: smaller;
 }
 
